--- a/external.css
+++ b/external.css
@@ -36,3 +36,12 @@ img{
     border-right: 500px solid;
     transition: 0.3s;
 }
+#valcards{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    color: aqua;
+}
+#head{
+    border: 10px solid greenyellow;
+    border-radius: 20%;
+}
