--- a/netflix/profile.css
+++ b/netflix/profile.css
@@ -53,7 +53,7 @@ display: flex;
     border-radius: 5%;
 }
 #addprofile:hover{
-   content: url(https://cdn.discordapp.com/attachments/1238374493995663396/1257390176402145300/image.png?ex=66843b5b&is=6682e9db&hm=049381346f81e448d6b4c4f9fb47187b3782e92f2d6924a9ce3f8246a5382565&);
+   content: url(https://i.ibb.co/jkHvn3N/Screenshot-2024-07-01-230525.png);
     transition: 0.05s;
 }
 img{
